--- a/app/Resources/views/default/categories.html.twig
+++ b/app/Resources/views/default/categories.html.twig
@@ -15,7 +15,6 @@
                 <div class="main_content">
 
                     <!-- Category -->
-
                     <div class="category">
                         <div class="section_panel d-flex flex-row align-items-center justify-content-start">
                             <div class="section_title">{{ localLang.blogPosts }}</div>
@@ -39,17 +38,20 @@
                             </div>
                         </div>
                         <div class="section_content">
-                            <h3 class="font-kirang-hearang text-info">{{ viewModel.selectedCategory.categoryName }} <small>({{ viewModel.articles|length }})</small></h3>
-                            <div class="grid clearfix">
+                            <h3 class="font-kirang-hearang text-info">{{ viewModel.selectedCategory.categoryName }} <small>({{ viewModel.page.itemsCount }})</small></h3>
+                            <div class="grid clearfix" id="catArticlesHolder">
                                 {% embed 'partials/articles/articles-cards-renderer.html.twig' with {'articles':viewModel.articles} %} {% endembed %}
                             </div>
                         </div>
                     </div>
 
                 </div>
-                <div class="load_more">
-                    <div id="load_more" class="load_more_button text-center trans_200">Load More</div>
-                </div>
+
+                 <div class="load_more">
+                        {% if viewModel.page.pages > viewModel.page.pageable.page %}
+                            <div id="load_more" class="load_more_button text-center trans_200">{{ localLang.loadMore }}</div>
+                        {% endif %}
+                    </div>
                 {% embed 'partials/quotes/main-content-quote.html.twig' %} {% endembed %}
             </div>
 
@@ -76,4 +78,8 @@
 
 {% block javascripts %}
     <script src="{{ asset('styles/js/category.js') }}"></script>
+    <script src="{{ asset('styles/js/load-more.js') }}"></script>
+    <script>
+         var loadMoreManager = new LoadMoreManager('{{ path('categories_page_load_more_articles', {'catName':viewModel.selectedCategory.categoryName}) }}', 'load_more', 'catArticlesHolder');
+    </script>
 {% endblock %}
