Adjusted some front end settings and fixed some misplacements. Removed unneeded files, used while developing.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,7 +17,7 @@
     <meta property="og:url" content="{% block ogUrl %}178.239.112.78{% endblock %}"/>
     <meta property="og:title" content="{% block ogTitle %}Jesterous{% endblock %}"/>
     <meta property="og:image"
-          content="{% block ogImage %}https://sibirskozdrave-montana.com/styles/images/pageBanner.png{% endblock %}"/>
+          content="{% block ogImage %}{{ url('homepage') }}images/category.jpg{% endblock %}"/>
     <meta property="og:description" content="{% block ogDescription %}Сайт за {% endblock %}"/>
     {% block facebookMetas %} {% endblock %}
     <!-- end facebook -->
