--- a/app/Resources/views/queries/load-more-articles-query.html.twig
+++ b/app/Resources/views/queries/load-more-articles-query.html.twig
@@ -5,7 +5,9 @@
 {% if articles.pages > articles.pageable.page %}
     <script>
         $(function () {
-          loadMoreManager.showButton();
+            loadMoreManager.showButton();
+            loadMoreManager.loadMasonry();
         });
+
     </script>
 {% endif %}
