--- a/app/Resources/views/author/panel.html.twig
+++ b/app/Resources/views/author/panel.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Author Panel {% endblock %}
 
 {% block body %}
-   {% embed 'partials/banner.html.twig' %} {% endembed %}
+    {% embed 'partials/banner.html.twig' %} {% endembed %}
 
     <div class="page_content">
         <div class="container">
@@ -15,9 +15,9 @@
                     {% if error is defined and error %}
                         <h3 class="alert response-text info alert-danger">{{ error }}</h3>
                     {% endif %}
-                    <div class="main_content">
+                    <div class="main_content"  style="display: none;">
                         {% block sectionBody %}
-                        <h3 class="text-dan">Select one of the options from the sidebar</h3>
+                            <h3 class="text-dan">Select one of the options from the sidebar</h3>
                         {% endblock %}
                     </div>
                 </div>
@@ -29,7 +29,8 @@
                             </div>
                             <div class="sidebar_section_content pt-0">
                                 <ul class="list-group">
-                                    <li class="list-group-item"><a href="{{ path('create_article') }}">Create article</a>
+                                    <li class="list-group-item"><a href="{{ path('create_article') }}">Create
+                                            article</a>
                                     </li>
                                     <li class="list-group-item">
                                         <a href="{{ path('my_articles') }}">My articles</a>
@@ -46,6 +47,22 @@
                                 <ul class="list-group">
                                     <li class="list-group-item">
                                         <a href="{{ path('author_followers') }}">My followers</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="sidebar_section">
+                            <div class="sidebar_title_container">
+                                <div class="sidebar_title">Images</div>
+                            </div>
+                            <div class="sidebar_section_content pt-0">
+                                <ul class="list-group">
+                                    <li class="list-group-item">
+                                        <a href="{{ path('upload_image') }}">Upload Image</a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <a href="{{ path('browse_my_images') }}?size=10">Browse Images</a>
                                     </li>
                                 </ul>
                             </div>
@@ -67,9 +84,12 @@
     <script src="{{ asset('styles/js/custom.js') }}"></script>
     <script>
         $(function () {
-           setTimeout(function () {
-               $('.response-text').fadeOut(1000);
-           }, 3000);
+            setTimeout(function () {
+                $('.response-text').fadeOut(1000);
+            }, 3000);
+            setTimeout(function () {
+                $('.main_content').fadeIn(600);
+            }, 200);
         });
     </script>
     {% block sectionScripts %} {% endblock %}
