Fixed og:description tag. Added the ability for admins to upload banners and choose which one to display.

--- a/app/Resources/views/admin/panel.html.twig
+++ b/app/Resources/views/admin/panel.html.twig
@@ -81,6 +81,22 @@
                             </div>
                         </div>
                         <hr>
+                        <div class="sidebar_section">
+                            <div class="sidebar_title_container">
+                                <div class="sidebar_title">Banners</div>
+                            </div>
+                            <div class="sidebar_section_content pt-0">
+                                <ul class="list-group">
+                                    <li class="list-group-item">
+                                        <a href="{{ path('upload_banner') }}">Upload Banner</a>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <a href="{{ path('browse_banners') }}">Browse Banners</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <hr>
                     {% endblock %}
                 {% endembed %}
             </div>
