--- a/app/Resources/views/queries/load-more-articles-query.html.twig
+++ b/app/Resources/views/queries/load-more-articles-query.html.twig
@@ -6,8 +6,11 @@
     <script>
         $(function () {
             loadMoreManager.showButton();
-            loadMoreManager.loadMasonry();
         });
-
     </script>
 {% endif %}
+<script>
+    $(function () {
+        loadMoreManager.loadMasonry();
+    });
+</script>
