Reduced number of queries by changing fetch to lazy on tags and comments. Added article read time estimation. Added privacy page. Fixed some card not linking to author but to "#"

--- a/app/Resources/views/default/article.html.twig
+++ b/app/Resources/views/default/article.html.twig
@@ -23,8 +23,10 @@
                     <div class="post_content">
                         <!-- Top Panel -->
                         {% embed 'partials/articles/article-author-info-panel.html.twig' with {'article':article} %} {% endembed %}
+                        <small>{{ twigUtil.displayEstimated(article.estimatedReadTime) }}</small>
                         <!-- Post Body -->
                         <div class="post_body ">
+
                             {#<div class="pb-2"><p class="text-dark">{{ article.summary }}</p></div>#}
                             <div class="ql-editor ql-snow">
                                 {{ article.mainContent|raw }}
