--- a/app/Resources/views/partials/articles/large-card-with-background.html.twig
+++ b/app/Resources/views/partials/articles/large-card-with-background.html.twig
@@ -8,7 +8,7 @@
         <div class="card-title"><a href="{{ path('show_article', {'id': article.id}) }}">{{ article.title }}</a></div>
 
         <small class="post_meta">
-            <a href="#">{{ article.author.username }}</a><span>{{ article.dateAdded.format(twigInformer.simpleDateFormat) }}</span>
+            <a href="{{ path('user_details', {'username':article.author.username}) }}">{{ article.author.username }}</a><span>{{ article.dateAdded.format(twigInformer.simpleDateFormat) }}</span>
         </small>
 
     </div>
