--- a/app/Resources/views/partials/articles/large-card-with-image.html.twig
+++ b/app/Resources/views/partials/articles/large-card-with-image.html.twig
@@ -7,7 +7,7 @@
         <div class="card-title"><a href="{{ path('show_article', {'id': article.id}) }}">{{ article.title }}</a></div>
         <p class="card-text">{{ article.summary }}</p>
         <small class="post_meta">
-            <a href="#">{{ article.author.username }}</a><span>{{ article.dateAdded.format(twigInformer.simpleDateFormat) }}</span>
+            <a href="{{ path('user_details', {'username':article.author.username}) }}">{{ article.author.username }}</a><span>{{ article.dateAdded.format(twigInformer.simpleDateFormat) }}</span>
         </small>
     </div>
 </div>
