--- a/app/Resources/views/partials/articles/small-card-without-image.html.twig
+++ b/app/Resources/views/partials/articles/small-card-without-image.html.twig
@@ -2,6 +2,6 @@
 <div class="card card_default card_small_no_image grid-item">
     <div class="card-body">
         <div class="card-title card-title-small"><a href="{{ path('show_article', {'id': article.id}) }}">{{ article.title }}</a></div>
-        <small class="post_meta"><a href="#">{{ article.author.username }}</a><span>{{ article.dateAdded.format("d - M - Y") }}</span></small>
+        <small class="post_meta"><a href="{{ path('user_details', {'username':article.author.username}) }}">{{ article.author.username }}</a><span>{{ article.dateAdded.format("d - M - Y") }}</span></small>
     </div>
 </div>
